<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">homebuh</string>
    <string name="action_settings">Settings</string>

    <string name="shortcut_button1">Обеды</string>
    <string name="shortcut_button2">Прод-ты</string>
    <string name="shortcut_button3">Трансп.</string>
    <string name="shortcut_button4">Уход</string>
    <string name="shortcut_button5">Такси</string>
    <string name="shortcut_button6">Дача</string>
    <string name="shortcut_button_more">Другое...</string>

    <string name="sync_button">Синхронизация</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отменить</string>

    <string name="sum_edit_placeholder">Сумма</string>
    <string name="comment_placeholder">Комментарий</string>
    <string name="key_edit_text_placeholder">Секретный ключ синхронизации</string>

    <string name="err_wrong_key">Неверный секретный ключ синхронизации</string>
    <string name="err_enter_amount">Введите сумму</string>
    <string name="err_load_cats">Загрузите категории</string>
    <string name="err_choose_cat">Выберите категорию</string>

    <string name="err_update_cats">Ошибка обновления категорий</string>
    <string name="err_sync">Ошибка синхронизации расходов</string>
    <string name="err_sync_first">Сначала синхронизируйте расходы</string>
    <string name="err_nothing_to_sync">Нет несинхронизированных расходов!</string>


    <string name="info_loading_cats">Загрузка категорий…</string>
    <string name="info_syncing">Синхронизация расходов…</string>
    <string name="info_sync_cnt">Число несинхронизированных записей</string>

    <string name="info_cats_updated">Категории обновлены, загружено %d записей</string>
    <string name="info_sync_complete">Записано: %1$s, удалено: %2$s</string>


    <string name="placeholder1">Защита от злых хакеров</string>

    <string name="menu_update_cats">Обновить список категорий</string>
    <string name="menu_enter_key">Ввести ключ синхронизации</string>
    <string name="menu_sync">Сихронизация</string>

    <string name="drawer_item_home">Внести расходы</string>

</resources>
